login.html facebook button changed

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
       <script>
         window.fbAsyncInit = function() {
           FB.init({
-            appId      : 'YOUR_APP_ID', // App ID
+            appId      : '402838229751431', // App ID
             channelUrl : '//WWW.YOUR_DOMAIN.COM/channel.html', // Channel File
             status     : true, // check login status
             cookie     : true, // enable cookies to allow the server to access the session
@@ -29,7 +29,7 @@
          }(document));
       </script>
 
-      <div class="fb-login-button" scope="email,user_checkins">
+      <div class="fb-login-button" scope="email,friends_about_me, friends_hometown, friends_hometown">
         Login with Facebook
       </div>
 
